5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1646_2449.log
== TEST (2019-04-16 10:44:28) 
-- CODE:
a = input("a: ")

n1 = a // 10000
n2 = a // 1000 % 10
n3 = a // 100 % 10
n4 = a // 10 % 10
n5 = a % 10

print (n1,n2,n3,n4,n5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n1 = a // 10000
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:45:16) 
-- CODE:
a = float(input("a: "))

n1 = a // 10000
n2 = a // 1000 % 10
n3 = a // 100 % 10
n4 = a // 10 % 10
n5 = a % 10

print (n1,n2,n3,n4,n5)
-- OUTPUT:
0.0 0.0 0.0 1.0 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:45:51) 
-- CODE:
a = float(input("a: "))

n1 = a // 10000
n2 = a // 1000 % 10
n3 = a // 100 % 10
n4 = a // 10 % 10
n5 = a % 10

print (n1,n2,n3,n4,n5)
-- OUTPUT:
0.0 0.0 0.0 1.0 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:53:57) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor de X
x = ((c * e) -(b * f)) / ((a * e) - (b * d))

#valor de Y
y = ((a * f) -(c * d)) / ((a * e) - (b * d))

if ((a * e) - (b * d)) != 0:
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- EXECUTION TIME:
0.121408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 9, in <module>
    x = ((c * e) -(b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:54:24) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor de X
x = ((c * e) -(b * f)) / ((a * e) - (b * d))

#valor de Y
y = ((a * f) -(c * d)) / ((a * e) - (b * d))

if ((a * e) - (b * d)) = 0:
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- EXECUTION TIME:
0.203803
-- ERROR:
  File "/home/codebench/codes/1646/2449/main.py", line 14
    if ((a * e) - (b * d)) = 0:
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:54:50) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor de X
x = ((c * e) -(b * f)) / ((a * e) - (b * d))

#valor de Y
y = ((a * f) -(c * d)) / ((a * e) - (b * d))

if ((a * e) - (b * d)) = 0:
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- ERROR:
File "XXXX", line 14
    if ((a * e) - (b * d)) = 0:
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:55:22) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor de X
x = ((c * e) -(b * f)) / ((a * e) - (b * d))

#valor de Y
y = ((a * f) -(c * d)) / ((a * e) - (b * d))

if (((a * e) - (b * d))) = 0:
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- ERROR:
File "XXXX", line 14
    if (((a * e) - (b * d))) = 0:
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:57:54) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
valor = (a * e) - (b * d)

#valor de X
x = ((c * e) -(b * f)) / valor

#valor de Y
y = ((a * f) -(c * d)) / valor

if valor = 0:
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- ERROR:
File "XXXX", line 17
    if valor = 0:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:58:14) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
valor = (a * e) - (b * d)

#valor de X
x = ((c * e) -(b * f)) / valor

#valor de Y
y = ((a * f) -(c * d)) / valor

if valor == 0:
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = ((c * e) -(b * f)) / valor
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:58:30) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
valor = (a * e) - (b * d)

#valor de X
x = ((c * e) -(b * f)) / valor

#valor de Y
y = ((a * f) -(c * d)) / valor

if valor == 0:
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- EXECUTION TIME:
0.148426
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 12, in <module>
    x = ((c * e) -(b * f)) / valor
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:59:46) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
valor = (a * e) - (b * d)

#valor de X
x = ((c * e) -(b * f)) / valor

#valor de Y
y = ((a * f) -(c * d)) / valor

if (valor == 0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = ((c * e) -(b * f)) / valor
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:00:07) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
valor = (a * e) - (b * d)

#valor de X
x = ((c * e) -(b * f)) / valor

#valor de Y
y = ((a * f) -(c * d)) / valor

if (valor == 0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- EXECUTION TIME:
0.190484
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 12, in <module>
    x = ((c * e) -(b * f)) / valor
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:01:32) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
valor = (a * e) - (b * d)

#valor de X
x = ((c * e) -(b * f)) / valor

#valor de Y
y = ((a * f) -(c * d)) / valor

if (valor == 0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = ((c * e) -(b * f)) / valor
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:05:18) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
valor = (a * e) - (b * d)

#valor de X
x = (c * e) -(b * f) / (a * e) - (b * d)

#valor de Y
y = (a * f) -(c * d) / (a * e) - (b * d)

if (valor == 0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:06:01) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
#valor = (a * e) - (b * d)

#valor de X
x = (c * e) -(b * f) / (a * e) - (b * d)

#valor de Y
y = (a * f) - (c * d) / (a * e) - (b * d)

if (valor == 0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    if (valor == 0):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:06:44) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
#valor = (a * e) - (b * d)

#valor de X
x = (c * e) -(b * f) / (a * e) - (b * d)

#valor de Y
y = (a * f) - (c * d) / (a * e) - (b * d)

if ((a * e) - (b * d) == 0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:07:53) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
#valor = (a * e) - (b * d)

#valor de X
x = ((c * e) -(b * f)) / ((a * e) - (b * d))

#valor de Y
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if (((a * e) - (b * d)) == 0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = ((c * e) -(b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:08:18) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
#valor = (a * e) - (b * d)

#valor de X
x = ((c * e) -(b * f)) / ((a * e) - (b * d))

#valor de Y
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if (((a * e) - (b * d)) == 0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- EXECUTION TIME:
0.137134
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 12, in <module>
    x = ((c * e) -(b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:08:30) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
#valor = (a * e) - (b * d)

#valor de X
x = ((c * e) -(b * f)) / ((a * e) - (b * d))

#valor de Y
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if (((a * e) - (b * d)) <= 0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)

-- EXECUTION TIME:
0.15569
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 12, in <module>
    x = ((c * e) -(b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:09:35) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
#valor = (a * e) - (b * d)

#valor de X


#valor de Y


if (((a * e) - (b * d)) <= 0):
	print ("Nao tem solucao")
else:
	x = ((c * e) -(b * f)) / ((a * e) - (b * d))
	print (x)
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print (y)

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:09:53) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
#valor = (a * e) - (b * d)

#valor de X


#valor de Y


if (((a * e) - (b * d)) <= 0):
	print ("Nao tem solucao")
else:
	x = ((c * e) -(b * f)) / ((a * e) - (b * d))
	print (x)
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print (y)

-- EXECUTION TIME:
0.164552
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Nao tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Nao tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:10:20) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
valor = (a * e) - (b * d)

if (valor <= 0):
	print ("Nao tem solucao")
else:
	x = ((c * e) -(b * f)) / ((a * e) - (b * d))
	print (x)
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print (y)

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:11:24) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
valor = (a * e) - (b * d)

if (valor <= 0):
	x = ((c * e) -(b * f)) / ((a * e) - (b * d))
	print (x)
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print (y)
else:
		print ("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = ((c * e) -(b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:11:42) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
valor = (a * e) - (b * d)

if (valor <= 0):
	x = ((c * e) -(b * f)) / ((a * e) - (b * d))
	print (x)
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print (y)
else:
	print ("Nao tem solucao")

-- EXECUTION TIME:
0.179733
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 12, in <module>
    x = ((c * e) -(b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:12:38) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
valor = (a * e) - (b * d)

if (valor <= 0):
	x = ((c * e) -(b * f)) / ((a * e) - (b * d))
	print (x)
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print (y)
else:
	print ("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = ((c * e) -(b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:54:00) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
valor = (a * e) - (b * d)

if (valor <= 0):
	x = ((c * e) -(b * f)) / valor
	print (x)
	y = ((a * f) - (c * d)) / valor
	print (y)
else:
	print ("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = ((c * e) -(b * f)) / valor
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:54:21) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
valor = (a * e) - (b * d)

if (valor != 0):
	x = ((c * e) -(b * f)) / valor
	print (x)
	y = ((a * f) - (c * d)) / valor
	print (y)
else:
	print ("Nao tem solucao")

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:54:44) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

#valor
valor = (a * e) - (b * d)

if (valor != 0):
	x = ((c * e) -(b * f)) / valor
	print (x)
	y = ((a * f) - (c * d)) / valor
	print (y)
else:
	print ("Nao tem solucao")

-- EXECUTION TIME:
0.115343
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
